--- a/MiniProject/BOOTSHOP/Views/Shared/_Layout.cshtml
+++ b/MiniProject/BOOTSHOP/Views/Shared/_Layout.cshtml
@@ -26,7 +26,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="ProductCategory" asp-action="Index">Product Categories</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Shop" asp-action="Index">Shops</a>
+                        </li>
                     </ul>
+
                 </div>
             </div>
         </nav>
