--- a/MiniProject/WebApplication1/WebApplication1/Views/Student/Index.cshtml
+++ b/MiniProject/WebApplication1/WebApplication1/Views/Student/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@model List<ConsoleApp2.Student>;
-
+﻿@model List<ConsoleApp2.Student>
 
 <div class="container p-3">
     <div class="row pt-4">
@@ -15,29 +14,35 @@
 </div>
 
 <table class="table table-bordered table-hover">
-    <thead>
+    <thead class="table-light">
         <tr>
             <th>Student ID</th>
             <th>First Name</th>
             <th>Last Name</th>
             <th>Gender</th>
             <th>Date of Birth</th>
-            <th>Actions</th>
+            <th class="text-center">Actions</th>
         </tr>
     </thead>
 
     <tbody>
-        @for(int i =0; i < Model.Count; i++)
+        @foreach (var student in Model)
         {
             <tr>
-                <td>@Model[i].StudentId</td>
-                <td>@Model[i].FirstName</td>
-                <td>@Model[i].LastName</td>
-                <td>@Model[i].Gender</td>
-                <td>@Model[i].BirthDate</td>
-                <td>-</td>
+                <td>@student.StudentId</td>
+                <td>@student.FirstName</td>
+                <td>@student.LastName</td>
+                <td>@student.Gender</td>
+                <td>@student.BirthDate.ToShortDateString()</td>
+                <td class="text-center">
+                    <a href="/Student/Edit/@student.StudentId" class="btn btn-outline-primary ">
+                         Edit
+                    </a>
+                    <a href="/Student/Delete/@student.StudentId" class="btn btn-outline-danger">
+                        <i class="bi bi-trash"></i> Delete
+                    </a>
+                </td>
             </tr>
         }
-
     </tbody>
 </table>
