--- a/MiniProject/WebApplication1/WebApplication1/Views/Scores/Index.cshtml
+++ b/MiniProject/WebApplication1/WebApplication1/Views/Scores/Index.cshtml
@@ -1,18 +1,24 @@
-﻿
+﻿@model List<ConsoleApp2.StudentScores>;
+
+
 <div class="container p-3">
     <div class="row pt-4">
         <div class="col-6">
-            <h2>Scores Index Page</h2></div>
-        <d iv class="col-6 text-end">
+            <h2>Scores Index Page</h2>
+        </div>
+        <div class="col-6 text-end">
+            <a href="/Student/Filter" class="btn btn-outline-info">
+                Filter Scores
+            </a>
             <a href="/Student/Add" class="btn btn-outline-primary">
-                Add New Score
+                Add New Scores
             </a>
         </div>
     </div>
 </div>
 
 <table class="table table-bordered table-hover">
-    <thead class="table-light">
+    <thead>
         <tr>
             <th>Student ID</th>
             <th>First Name</th>
@@ -20,28 +26,21 @@
             <th>Course Name</th>
             <th>Mark</th>
             <th>Grade</th>
-            <th class="text-center">Actions</th>
         </tr>
     </thead>
 
     <tbody>
-        @foreach (var student in Model)
+        @for (int i = 0; i < Model.Count; i++)
         {
             <tr>
-                <td>@student.StudentId</td>
-                <td>@student.FirstName</td>
-                <td>@student.LastName</td>
-                <td>@student.Course</td>
-                <td>@student.BirthDate.ToShortDateString()</td>
-                <td class="text-center">
-                    <a href="/Student/Edit/@student.StudentId" class="btn btn-outline-primary ">
-                        Edit
-                    </a>
-                    <a href="/Student/Delete/@student.StudentId" class="btn btn-outline-danger">
-                        <i class="bi bi-trash"></i> Delete
-                    </a>
-                </td>
+                <td>@Model[i].StudentId</td>
+                <td>@Model[i].FirstName</td>
+                <td>@Model[i].LastName</td>
+                <td>@Model[i].Course</td>
+                <td>@Model[i].Mark</td>
+                <td>@Model[i].Grade</td>
             </tr>
         }
+
     </tbody>
 </table>
