--- a/MiniProject/WebApplication1/WebApplication1/Views/Student/Delete.cshtml
+++ b/MiniProject/WebApplication1/WebApplication1/Views/Student/Delete.cshtml
@@ -1,47 +1,35 @@
 ﻿@model ConsoleApp2.Student
 
-@{
-    ViewData["Title"] = "Delete Student";
-}
+<form method="post">
+    <input type="hidden" asp-for="StudentId" />
+    <div class="border p-3 mt-4">
+        <div class="row pb-2">
+            <h2>Delete Student</h2>
+            <hr />
+        </div>
+        <div class="mb-3">
+            <label for="FirstName" class="form-label">First Name</label>
+            <input class="form-control" disabled asp-for="FirstName"/>
+        </div>
+        <div class="mb-3">
+            <label for="LastName" class="form-label">Last Name</label>
+            <input class="form-control" disabled asp-for="LastName" />
+        </div>
 
-<div class="container p-3">
-    <div class="row pt-4">
-        <div class="col-6">
-            <h2>Delete Student Details</h2>
+        <div class="mb-3">
+            <label for="Gender" class="form-label">Gender</label>
+            <input class="form-control" disabled asp-for="Gender" />
         </div>
-        <div class="col-6 text-end">
-            <a asp-controller="Student" asp-action="Index" class="btn btn-outline-secondary">
-                Back to List
-            </a>
+        <div class="mb-3">
+            <label for="BirthDate" class="form-label">BirthDate</label>
+            <input class="form-control" disabled asp-for="BirthDate" />
         </div>
+
+        <button class="btn btn-outline-danger">Submit</button>
+
+        <a href="/Student/Index" class="btn btn-outline-warning">
+            Back to list
+        </a>
+
     </div>
-
-    <form method="post" asp-action="Delete" class="mt-4">
-        <input type="hidden" asp-for="StudentId" />
-
-        <div class="mb-3">
-            <label asp-for="FirstName" class="form-label">First Name</label>
-            <input asp-for="FirstName" class="form-control" disabled/>
-        </div>
-
-        <div class="mb-3">
-            <label asp-for="LastName" class="form-label">Last Name</label>
-            <input asp-for="LastName" class="form-control" disabled />
-        </div>
-
-        <div class="mb-3">
-            <label asp-for="Gender" class="form-label">Gender</label>
-            <input asp-for="Gender" class="form-control" disabled />
-        </div>
-
-        <div class="mb-3">
-            <label asp-for="BirthDate" class="form-label">Date of Birth</label>
-            <input asp-for="BirthDate" type="date" class="form-control"
-                   value="@Model.BirthDate.ToString("yyyy-MM-dd")" disabled />
-        </div>
-
-        <button type="submit" class="btn btn-outline-danger">
-            Submit
-        </button>
-    </form>
-</div>
+</form>
