--- a/MiniProject/WebApplication1/WebApplication1/Views/Student/Index.cshtml
+++ b/MiniProject/WebApplication1/WebApplication1/Views/Student/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<ConsoleApp2.Student>
+﻿@model List<ConsoleApp2.Student>;
+
 
 <div class="container p-3">
     <div class="row pt-4">
@@ -6,6 +7,9 @@
             <h2>Student Index Page</h2>
         </div>
         <div class="col-6 text-end">
+            <a href="/Student/Filter" class="btn btn-outline-info">
+                Filter Students
+            </a>
             <a href="/Student/Add" class="btn btn-outline-primary">
                 Add New Student
             </a>
@@ -14,35 +18,41 @@
 </div>
 
 <table class="table table-bordered table-hover">
-    <thead class="table-light">
+    <thead>
         <tr>
             <th>Student ID</th>
             <th>First Name</th>
             <th>Last Name</th>
             <th>Gender</th>
             <th>Date of Birth</th>
-            <th class="text-center">Actions</th>
+            <th>Actions</th>
         </tr>
     </thead>
 
     <tbody>
-        @foreach (var student in Model)
+        @for(int i =0; i < Model.Count; i++)
         {
             <tr>
-                <td>@student.StudentId</td>
-                <td>@student.FirstName</td>
-                <td>@student.LastName</td>
-                <td>@student.Gender</td>
-                <td>@student.BirthDate.ToShortDateString()</td>
-                <td class="text-center">
-                    <a href="/Student/Edit/@student.StudentId" class="btn btn-outline-primary ">
-                         Edit
+                <td>@Model[i].StudentId</td>
+                <td>@Model[i].FirstName</td>
+                <td>@Model[i].LastName</td>
+                <td>@Model[i].Gender</td>
+                <td>@Model[i].BirthDate</td>
+                <td>
+
+                    <a href="/Student/Edit/@Model[i].StudentId" 
+                        class="btn btn-outline-warning btn-sm">
+                        Edit
                     </a>
-                    <a href="/Student/Delete/@student.StudentId" class="btn btn-outline-danger">
-                        <i class="bi bi-trash"></i> Delete
+
+                    <a href="/Student/Delete/@Model[i].StudentId" 
+                        class="btn btn-outline-danger btn-sm">
+                        Delete
                     </a>
+
                 </td>
             </tr>
         }
+
     </tbody>
 </table>
