--- a/MiniProject/MyApp/Views/Items/Create.cshtml
+++ b/MiniProject/MyApp/Views/Items/Create.cshtml
@@ -15,6 +15,11 @@
         <label for="Price" class="control-label">Price</label>
         <input type="number" asp-for="Price" class="form-control" />
     </div>
+    <div class="form-group">
+        <label for="CategoryId" class="control-label">Category</label>
+        <select asp-for="CategoryId" asp-items="ViewBag.Categories" class="form-control"></select>
+    </div>
+
     <div class="form-group mt-2">
         <input type="submit" value="Create" class="btn btn-primary" />
     </div>
