--- a/MiniProject/MyApp/Views/Items/Delete.cshtml
+++ b/MiniProject/MyApp/Views/Items/Delete.cshtml
@@ -16,6 +16,10 @@
         <input type="number" asp-for="Price" class="form-control" disabled />
     </div>
     <div class="form-group">
+        <label for="CategoryId" class="control-label">Category</label>
+        <input type="text" asp-for="CategoryId" class="form-control" disabled />
+        </div>
+    <div class="form-group">
         <input type="submit" value="Delete" class="btn btn-danger" />
         <a asp-action="Index" class="btn btn-secondary">Cancel</a>
     </div>
