--- a/MiniProject/MyApp/Views/Items/Edit.cshtml
+++ b/MiniProject/MyApp/Views/Items/Edit.cshtml
@@ -14,6 +14,10 @@
     <div class="form-group">
         <label for="Price" class="control-label">Price</label>
         <input type="number" asp-for="Price" class="form-control" />
+    </div> 
+    <div class="form-group">
+        <label for="CategoryId" class="control-label">Category</label>
+        <select asp-for="CategoryId" asp-items="ViewBag.Categories" class="form-control"></select>
     </div>
     <div class="form-group">
         <input type="submit" value="Update" class="btn btn-primary" />
